# cryoPARES

./: .buildinfo  BUILDOCS.html  CLAUDE.md  LICENSE  README.html  README.md  RECONSTRUCTION_ANALYSIS.md  THIRD-PARTY-LICENSES  cli.html  configuration_guide.html  genindex.html  index.html  objects.inv  projmatching_accuracy_improvements.html  py-modindex.html  pyproject.toml  requirements-freeze.txt  requirements.txt  search.html  searchindex.js  setup.py  training_guide.html  troubleshooting.html
.doctrees/: BUILDOCS.doctree  README.doctree  cli.doctree  configuration_guide.doctree  index.doctree  projmatching_accuracy_improvements.doctree  training_guide.doctree  troubleshooting.doctree
.doctrees/api/: data_management.doctree  index.doctree  inference.doctree  models.doctree  projection_matching.doctree  reconstruction.doctree  training.doctree  utils.doctree
.doctrees/maintenance/: DOCUMENTATION_GUIDE.doctree
.github/workflows/: docs.yml
_modules/: index.html
_sources/: BUILDOCS.md.txt  README.md.txt  configuration_guide.md.txt  projmatching_accuracy_improvements.md.txt  training_guide.md.txt  troubleshooting.md.txt
_sources/api/: data_management.rst.txt  index.rst.txt  inference.rst.txt  models.rst.txt  reconstruction.rst.txt  (+3 more)
api/: data_management.html  index.html  inference.html  models.html  projection_matching.html  reconstruction.html  training.html  utils.html
cryoPARES/: __init__.py  cacheManager.py  constants.py
docs/: .gitignore  README.md  benchmark_local_refinement.md  cli.md  conf.py  configuration_guide.md  generate_cli_docs.py  index.rst  projmatching_accuracy_improvements.md  projmatching_benchmark_results.md  requirements.txt  scripts_guide.md  training_guide.md  troubleshooting.md  update_docs.py  validate_docs.py
maintenance/: DOCUMENTATION_GUIDE.html
scripts/: benchmark_batch_memory.py  run_benchmark_local_refinement.sh  run_bgal_benchmark.sh  run_final_benchmark.sh  run_speedopt_validation.sh  summarize_benchmark.py
tests/: dummy_model.py  test_buffer_pool_fatal_error.py  test_cacheManager.py  test_configParser.py  test_consensus_alignment.py  test_daemon.py  test_errorFormatting.py  test_error_integration.py  test_inference_distrib.py  test_package_end_to_end.sh  test_projmatching_distrib.py  test_reconstruct.py  test_reconstruct_confidence.py  test_reconstruct_distrib.py  test_simclr_loss.py  test_simulate_particles.py  test_skip_localrefinement_scores.py  test_so3_interpolation.py  test_subprocessUtils.py  test_tensorDataBuffer.py
(+194 files in other folders)
