[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoPARES"
description = "Cryo-EM Pose-Assignment for Related Experiments via Supervision"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Ruben Sanchez-Garcia", email = "rsanchezgarc@faculty.ie.edu"},
]
keywords = ["deep learning", "cryo-em", "pose estimation", "so3-equivariance"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/rsanchezgarc/cryoPARES"
"Bug Tracker" = "https://github.com/rsanchezgarc/cryoPARES/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "cryoPARES.__version__"}

[tool.setuptools]
packages = ["cryoPARES"]
