[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoPARES"
description = "Cryo-EM Pose-Assignment for Related Experiments via Supervision"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"} #TODO: Update license
authors = [
  {name = "Ruben Sanchez-Garcia", email = "rsanchezgarc@faculty.ie.edu"},
]
keywords = ["deep learning", "cryo-em", "pose estimation", "so3-equivariance"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/rsanchezgarc/cryoPARES"
"Bug Tracker" = "https://github.com/rsanchezgarc/cryoPARES/issues"

[project.scripts]
cryopares_infer = "cryoPARES.projmatching.infer:main"
cryopares_reconstruct = "cryoPARES.reconstruction.reconstruct:main"
cryopares_projmatching = "cryoPARES.projmatching.projmatching:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "cryoPARES.__version__"}

[tool.setuptools]
packages = ["cryoPARES"]
